docs/samples/valid/basic_declarations.edl
let x: int = 10;
let y: float = 2.5;
let ready: bool = true;
let msg: string = "compiler";

print(x);
print(msg);
