docs/samples/invalid/undeclared_identifier.edl
let x: int = 1;
y = x + 2;
